{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 85,
  "lineage": "64f4eab3-6bfb-dc07-7cf1-f22dec7bda53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-ITEA-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0932440befd74cdba",
            "arn": "arn:aws:ec2:eu-central-1:124758622085:instance/i-082d53960c49177f0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082d53960c49177f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Frankfurt-Linux-ubuntu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024158b6d6bb44fcc",
            "private_dns": "ip-172-31-6-33.eu-central-1.compute.internal",
            "private_ip": "172.31.6.33",
            "public_dns": "ec2-3-121-219-171.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.219.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03568e93e2ddad7f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02df684cf0ddeae76",
            "tags": {
              "Name": "ubuntu-ITEA-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fca9785a5d9b8aa3"
            ]
          },
          "dependencies": [
            "aws_security_group.itea-ubnt-sg",
            "aws_subnet.itea-subnet-1",
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "itea-igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:124758622085:internet-gateway/igw-0a379c53377423f22",
            "id": "igw-0a379c53377423f22",
            "owner_id": "124758622085",
            "tags": {
              "Name": "itea-igateway"
            },
            "vpc_id": "vpc-02990132ee994e8cc"
          },
          "dependencies": [
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "itea-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0344218a2ac4880f1",
            "owner_id": "124758622085",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a379c53377423f22",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-02990132ee994e8cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.itea-igateway",
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "itea-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06064da7ae18db345",
            "route_table_id": "rtb-0344218a2ac4880f1",
            "subnet_id": "subnet-02df684cf0ddeae76"
          },
          "dependencies": [
            "aws_internet_gateway.itea-igateway",
            "aws_route_table.itea-route-table",
            "aws_subnet.itea-subnet-1",
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "itea-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:124758622085:security-group/sg-0a1245883ecf7e5d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1245883ecf7e5d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20210209131701375200000002",
            "name_prefix": "terraform-",
            "owner_id": "124758622085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itea-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02990132ee994e8cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "itea-ubnt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:124758622085:security-group/sg-0fca9785a5d9b8aa3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fca9785a5d9b8aa3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210209131701372400000001",
            "name_prefix": "terraform-",
            "owner_id": "124758622085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itea-ubnt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02990132ee994e8cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itea-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:124758622085:subnet/subnet-02df684cf0ddeae76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-02df684cf0ddeae76",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124758622085",
            "tags": {
              "Name": "itea-subnet-1"
            },
            "vpc_id": "vpc-02990132ee994e8cc"
          },
          "dependencies": [
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itea-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:124758622085:subnet/subnet-02eb4818787b49a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-02eb4818787b49a62",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124758622085",
            "tags": {
              "Name": "itea-subnet-2"
            },
            "vpc_id": "vpc-02990132ee994e8cc"
          },
          "dependencies": [
            "aws_vpc.itea-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "itea-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:124758622085:vpc/vpc-02990132ee994e8cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-051b65a4f3aa00876",
            "default_route_table_id": "rtb-013a5b45fc43965ef",
            "default_security_group_id": "sg-030bbcf5f59523d8f",
            "dhcp_options_id": "dopt-7729c21d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02990132ee994e8cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013a5b45fc43965ef",
            "owner_id": "124758622085",
            "tags": {
              "Name": "itea-vpc"
            }
          }
        }
      ]
    }
  ]
}